pyReScene 0.3
=============

 * pyReScene Auto: CD1.srr files were created in certain cases
 * pyReScene Auto: Subservience.2007.BDRip.XviD-DOCUMENT wasn't detected
   as a release
 * pyReScene Auto: -c flag works again
 * ReScene: -e output bug fixed
 * pyReScene Auto: FIX-release inside release dir made it fail

pyReScene 0.2
=============

 * ReScene: OpenSubtitles.org hashes are stored while creating SRR files
 * BUG: reconstructing RARs with old style recovery records works
 * PyPy support: it runs faster than with CPython
 * EXE files for Windows available
 
pyReScene 0.1
=============

pyReScene Auto: (pyrescene.py)
 * Initial version. It can automatically create a complete SRR file.
 * No write access to the release directory is required. This means it works
   with DVDs. It also guarantees that nothing in the processed directories
   will change. (not a guarantee of awescript)
 * -s parameter verifies sample against main movie files. If this fails it will
   still try to create an SRS file.
 * -r parameter to recursively create SRR files.
 * -c parameter will create SRRs for compressed RAR files.
 * .ext.txt text files for corrupt samples. They show the error and the
   file size.

ReScene: (srr)
 * Initial version. Changes since ReScene .NET 1.2:
 * Asks for confirmation before overwriting an SRR file.
 * Ability to replace missing file data with zero bytes when reconstructing:
   reconstruct with missing files.
 * -l option lists file sizes and CRCs too.
 * -e option lists detailed SRR information.
 * Add, remove, rename stored files API available.
 * Able to locate more data files in Linux.
 * Able to write the corrupt end block of certain P0W4 releases.
   e.g. Psych.S06E02.HDTV.XviD-P0W4
 * Separate script for fixing merged SRR files (fccleanup.py)
   copy /b cd1.srr+cd2.srr cdALL.srr
   The merged SRR file contains two application names and not all files
   are at the start of the SRR file.
 * -q parameter to verify an extracted release is valid.
 