@@ -5,8 +5,9 @@ pyReScene 0.3
  * pyReScene Auto: Subservience.2007.BDRip.XviD-DOCUMENT wasn't detected
    as a release
  * pyReScene Auto: -c flag works again
- * ReScene: -e output bug fixed
  * pyReScene Auto: FIX-release inside release dir made it fail
+ * pyReScene Auto: -l parameter added to report sample issues
+ * ReScene: -e output bug for RAR end block fixed
 
 pyReScene 0.2
 =============
